--- a/docs/crypto-ise.specification.tex
+++ b/docs/crypto-ise.specification.tex
@@ -170,9 +170,9 @@ the value in {\tt SHAMT}.
 
 \subsubsection{Bitwise and Twiddle Instructions}
 
-\paragraph{XORT, ANDT, ORT}
+\paragraph{XOR.cr, AND.cr, OR.cr}
 
-The \ASM{XORT}, \ASM{ANDT}, and \ASM{ORT} instructions compute the
+The \ASM{XOR.cr}, \ASM{AND.cr}, and \ASM{OR.cr} instructions compute the
 appropriate bitwise result of their operation between the {\tt rs1} and
 {\tt rs2} operands. The result is then written into {\tt rd}.
 \designnote{Originally the bitwise instructions were to have twiddle
@@ -184,13 +184,13 @@ The only difference between these instructions and their standard RISC-V
 counterparts is that they operate on the $\CPR$ register file.
 
 \begin{itemize}
-\item \INST{XORT rd, rs1, rs2}{
+\item \INST{XOR.cr rd, rs1, rs2}{
     $ \CPR[*][\OPER{rd}] \ASN \CPR[*][rs1] \XOR \CPR[*][rs2] $ \\
 }
-\item \INST{ANDT rd, rs1, rs2}{
+\item \INST{AND.cr rd, rs1, rs2}{
     $ \CPR[*][\OPER{rd}] \ASN \CPR[*][rs1] \AND \CPR[*][rs2] $ \\
 }
-\item \INST{ORT rd, rs1, rs2}{
+\item \INST{OR.cr rd, rs1, rs2}{
     $ \CPR[*][\OPER{rd}] \ASN \CPR[*][rs1] \IOR \CPR[*][rs2] $ \\
 }
 \end{itemize}
@@ -563,9 +563,9 @@ SRL.px  rd, rs1, shamt          \\
 ROT.px  rd, rs1, shamt          \\
 MVCOP   rd, rs1                 \\
 MVGPR   rd, rs1                 \\
-XORT    rd, rs1, rs2            \\
-ANDT    rd, rs1, rs2            \\
-ORT     rd, rs1, rs2            \\
+XOR.cr  rd, rs1, rs2            \\
+AND.cr  rd, rs1, rs2            \\
+OR.cr   rd, rs1, rs2            \\
 TWID.B  rd, rs1, b0, b1, b2, b3 \\
 TWID.HN rd, rs1, n0, n1, n2, n3 \\
 TWID.LN rd, rs1, n0, n1, n2, n3 \\
